Bug 464728 - Selection -> Add cursors to line ends: Cursor at beginning of long line set not properly
Summary: Selection -> Add cursors to line ends: Cursor at beginning of long line set n...
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: kwrite (other bugs)
Version First Reported In: 22.12.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-01-24 09:46 UTC by Robert Dady
Modified: 2023-01-26 13:51 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Dady 2023-01-24 09:46:42 UTC
SUMMARY
***
Selection -> Add cursors to line ends: if cursor set to the beginning of long wrapped line, cursor set into the last line of wrapped long text, resulting in text typed in the middle of that long wrapped line
***


STEPS TO REPRODUCE
1.  Open a file with long lines that wrap to new line
2. Select some lines including the wrapped line
3. Select from menu: [selection] then [Add cursors to line ends]
4. Press [Home] key twice
5. Type something

OBSERVED RESULT

New content appears in the middle of the wraped line

EXPECTED RESULT

New content should appear at the beginning the wrapped long line

SOFTWARE/OS VERSIONS

Linux/KDE Plasma: Version 22.12.1
ersion: Version 5.102.0
Qt Version: Version 5.15.8 (built against 5.15.8)

ADDITIONAL INFORMATION
Comment 1 Robert Dady 2023-01-24 09:48:11 UTC
Kate is affected as well, because same menu and functionality is available in Kate as well.
Comment 2 Bug Janitor Service 2023-01-25 11:52:40 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/ktexteditor/-/merge_requests/475
Comment 3 Christoph Cullmann 2023-01-26 13:51:38 UTC
Git commit e4dbff30b1a5c14b3ae4923435365558a2e122d4 by Christoph Cullmann, on behalf of Waqar Ahmed.
Committed on 26/01/2023 at 13:44.
Pushed by cullmann into branch 'master'.

Fix home key doesn't move secondary cursor to start

M  +1    -1    src/view/kateviewinternal.cpp

https://invent.kde.org/frameworks/ktexteditor/commit/e4dbff30b1a5c14b3ae4923435365558a2e122d4