Fix home key doesn't move secondary cursor to start

BUG: 464728